--- a/templates/index.html
+++ b/templates/index.html
@@ -272,20 +272,20 @@ Join thousands of students making memories together.
 
 /* User buttons */
 document.getElementById("userNavBtn").onclick = () => {
-window.location.href = "login.html";
+window.location.href = "/login";
 };
 
 document.getElementById("enterUserBtn").onclick = () => {
-window.location.href = "login.html";
+window.location.href = "/login";
 };
 
 /* Admin buttons */
 document.getElementById("adminNavBtn").onclick = () => {
-window.location.href = "admin.html";
+window.location.href = "/admin";
 };
 
 document.getElementById("enterAdminBtn").onclick = () => {
-window.location.href = "admin.html";
+window.location.href = "/admin";
 };
 
 </script>
